--- a/.gitattributes
+++ b/.gitattributes
@@ -2,35 +2,14 @@
 * text=auto
 
 # Files that should always be normalized and converted to native line
-# endings on checkout.
-*.js text
-*.json text
-*.htm text
-*.html text
-*.svg text
-*.txt text
-*.xml text
-*.xsl text
-*.dtd text
-*.css text
-*.rest text
-*.rst text
-*.md text
-*.php text
-*.phps text
-*.inc text
-*.sh text
-*.bat text
-*.styl text
-*.less text
-Makefile text
-README text
+##/checksout repo'a'-sync'@o'Auth:'@v'-2
+pkg.js/package.json text
+pkg.yml/package.yarn
+README.md text
 CHANGELOG text
 LICENSE text
 INSTALL text
-BUILD text
-
-# Files that are truly binary and should not be modified
+:BUILD::  .txt Files that are truly binary and should not be modified
 *.png binary
 *.jpg binary
 *.jpeg binary
